--- a/playground/ising/src/index.css
+++ b/playground/ising/src/index.css
@@ -1,7 +1,11 @@
 
 body {
-  background: rgba(0, 0, 0, 0.8);
+
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
+
+  color: snow;
+  background: rgba(0, 0, 0, 0.8);
 }
